fix: add overflow in box-2, image size and spacing in the heading

--- a/css/components/box-2.css
+++ b/css/components/box-2.css
@@ -4,8 +4,10 @@
   border-radius: var(--radius-card);
   grid-area: box-2;
   padding: 1rem;
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
+  overflow: hidden;
 }
 
 .box2__profiles {
@@ -27,8 +29,8 @@
 }
 
 .box2__logo {
-  width: 3rem;
-  height: 3rem;
+  width: 2.625rem;
+  height: 2.625rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,6 +67,7 @@
 @media screen and (min-width: 768px) {
   .box-2 {
     padding: 1.5rem;
+    gap: 3rem;
   }
 
   .box2__heading {
@@ -75,7 +78,13 @@
 }
 
 @media screen and (min-width: 1024px) {
+  .box-2 {
+    gap: 1.25rem;
+  }
+
   .box2__heading {
     font-size: 2rem;
+    letter-spacing: -0.06em;
+    line-height: 0.8em;
   }
 }
